--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="row justify-content-between align-items-center">
           <div class="logo">
-            <a href="index.html"><span class="logo-circle"></span> Bailo</a>
+            <a href="index.html"><span class="logo-circle"></span> Omno</a>
           </div>
           <ul class="menu">
             <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
@@ -131,7 +131,7 @@
             <div class="about-content">
               <p>
                 Whether you're attending a business meeting or enjoying a night
-                out, Bailo watchs can complement any outfit, adding a touch of
+                out, Omno watchs can complement any outfit, adding a touch of
                 sophistication
               </p>
               <div class="color-container">
@@ -184,7 +184,7 @@
             </div>
 
             <div class="card-name">
-              <p>Smart Bailo Watch</p>
+              <p>Smart Omno Watch</p>
             </div>
 
             <div class="card-prices">
@@ -214,7 +214,7 @@
             </div>
 
             <div class="card-name">
-              <p>Smart Bailo Watch</p>
+              <p>Smart Omno Watch</p>
             </div>
 
             <div class="card-prices">
@@ -244,7 +244,7 @@
             </div>
 
             <div class="card-name">
-              <p>Smart Bailo Watch</p>
+              <p>Smart Omno Watch</p>
             </div>
 
             <div class="card-prices">
@@ -274,7 +274,7 @@
             </div>
 
             <div class="card-name">
-              <p>Smart Bailo Watch</p>
+              <p>Smart Omno Watch</p>
             </div>
 
             <div class="card-prices">
@@ -304,7 +304,7 @@
             </div>
 
             <div class="card-name">
-              <p>Smart Bailo Watch</p>
+              <p>Smart Omno Watch</p>
             </div>
 
             <div class="card-prices">
@@ -334,7 +334,7 @@
             </div>
 
             <div class="card-name">
-              <p>Smart Bailo Watch</p>
+              <p>Smart Omno Watch</p>
             </div>
 
             <div class="card-prices">
@@ -464,7 +464,7 @@
         <div class="row">
           <div class="left-col">
             <div class="logo">
-              <a href="index.html"><span class="logo-circle"></span> Bailo</a>
+              <a href="index.html"><span class="logo-circle"></span> Omno</a>
             </div>
             <div class="social-media">
               <a href="#"><i class="fa-brands fa-facebook"></i></a>
